Closed Bug 13439 Opened 26 years ago Closed 26 years ago

SelectAll Delete does not repaint entire edit area

Categories

(Core :: DOM: Editor, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: kinmoz, Assigned: kinmoz)

References

Details

1. Start a new editor test bed window with the default test page. 2. Select all of the content. (CTRL-A) 3. Hit the backspace key. You should see the caret move to the beginning of the document, but notice how you still see parts of the document that should have been deleted. Refreshing the window fixes this. This only happens when you bring up a new window. If you undo all your changes and then repeat steps 1 through 3, you will not be able to reproduce the bug.
Status: NEW → ASSIGNED
Summary: SelectAll Delete leaves does not repaint entire edit area → SelectAll Delete does not repaint entire edit area
Target Milestone: M11
Fixed summary line. Accepting bug. Marking M11.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
mUpdateBatchCnt code was interfering with the new code that was added to UpdateView() that accumulated dirty rects. Fix checked into mozilla/view/src/nsViewManager.cpp revision 3.118 - Removed all references to mUpdateBatchCnt in nsViewManager::UpdateView(). - The methods Enable/DisableRefresh() now check to see if we are batching before executing their code. This will prevent any layout/parser code from turning on refresh before all Begin/EndUpdateViewBatch() calls are unwound.
*** Bug 13923 has been marked as a duplicate of this bug. ***
Status: RESOLVED → VERIFIED
verified in 9/16 build.
You need to log in before you can comment on or make changes to this bug.