Fix for bug #13439: SelectAll Delete does not repaint entire edit area

- Removed all references to mUpdateBatchCnt
    in nsViewManager::UpdateView().

  - The methods Enable/DisableRefresh() now check to
    see if we are batching before executing their code.
    This will prevent any layout/parser code from turning
    on refresh before all Begin/EndUpdateViewBatch() calls
    are unwound.